--- a/movie-rentals/package.json
+++ b/movie-rentals/package.json
@@ -9,7 +9,9 @@
     "babel": "^6.23.0",
     "bootstrap": "^5.1.1",
     "react": "^17.0.2",
+    "react-bootstrap": "^1.6.4",
     "react-dom": "^17.0.2",
+    "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
     "web-vitals": "^1.1.2"
   },
@@ -38,6 +40,7 @@
     ]
   },
   "devDependencies": {
-    "@babel/preset-react": "^7.14.5"
+    "@babel/preset-react": "^7.14.5",
+    "firebase": "^9.1.0"
   }
 }
