--- a/movie-rentals/package.json
+++ b/movie-rentals/package.json
@@ -6,14 +6,14 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
-    "babel": "^6.23.0",
     "bootstrap": "^5.1.1",
     "react": "^17.0.2",
     "react-bootstrap": "^1.6.4",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
-    "web-vitals": "^1.1.2"
+    "webpack": "^4.44.2",
+    "webpack-cli": "^4.8.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -40,7 +40,20 @@
     ]
   },
   "devDependencies": {
+    "@babel/core": "^7.15.5",
+    "@babel/plugin-proposal-class-properties": "^7.14.5",
+    "@babel/plugin-syntax-dynamic-import": "^7.8.3",
+    "@babel/plugin-transform-react-constant-elements": "^7.14.5",
+    "@babel/plugin-transform-react-inline-elements": "^7.14.5",
+    "@babel/plugin-transform-runtime": "^7.15.0",
+    "@babel/preset-env": "^7.15.6",
     "@babel/preset-react": "^7.14.5",
-    "firebase": "^9.1.0"
+    "@babel/runtime": "^7.15.4",
+    "babel-cli": "^6.26.0",
+    "babel-plugin-transform-react-remove-prop-types": "^0.4.24",
+    "file-loader": "^6.2.0",
+    "firebase": "^9.1.0",
+    "url-loader": "^4.1.1",
+    "web-vitals": "^2.1.0"
   }
 }
