--- a/movie-rentals/firebase.json
+++ b/movie-rentals/firebase.json
@@ -1,5 +1,20 @@
 {
-    "hosting": {
-      "public": "public"
-    }
+  "firestore": {
+    "rules": "firestore.rules",
+    "indexes": "firestore.indexes.json"
+  },
+  "hosting": {
+    "public": "build",
+    "ignore": [
+      "firebase.json",
+      "**/.*",
+      "**/node_modules/**"
+    ],
+    "rewrites": [
+      {
+        "source": "**",
+        "destination": "/index.html"
+      }
+    ]
   }
+}
