--- a/movie-rentals/package.json
+++ b/movie-rentals/package.json
@@ -6,14 +6,14 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "babel": "^6.23.0",
     "bootstrap": "^5.1.3",
+    "optimize-css-assets-webpack-plugin": "^6.0.1",
     "react": "^17.0.2",
     "react-bootstrap": "^2.0.0-rc.0",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.3.0",
-    "react-scripts": "4.0.3",
-    "webpack": "^4.44.2",
-    "webpack-cli": "^4.8.0"
+    "react-scripts": "4.0.3"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -50,10 +50,16 @@
     "@babel/preset-react": "^7.14.5",
     "@babel/runtime": "^7.15.4",
     "babel-cli": "^6.26.0",
+    "babel-loader": "^8.1.0",
     "babel-plugin-transform-react-remove-prop-types": "^0.4.24",
     "file-loader": "^6.2.0",
     "firebase": "^9.1.0",
+    "html-webpack-plugin": "^5.5.0",
+    "sass": "^1.43.4",
+    "sass-loader": "^12.3.0",
     "url-loader": "^4.1.1",
-    "web-vitals": "^2.1.0"
+    "web-vitals": "^2.1.0",
+    "webpack": "^4.44.2",
+    "webpack-cli": "^4.9.1"
   }
 }
