--- a/movie-rentals/.babelrc
+++ b/movie-rentals/.babelrc
@@ -1,3 +1,11 @@
 {
-    "presets": ["@babel/preset-react"]
+    "presets": ["@babel/preset-react"],
+    "env": {
+        "development": {
+            "plugins": ["transform-es2015-modules-commonjs"]
+        },
+        "test": {
+            "plugins": ["transform-es2015-modules-commonjs"]
+        }
+    }
 }
