--- a/movie-rentals/package.json
+++ b/movie-rentals/package.json
@@ -18,7 +18,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
+    "test": "jest",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
@@ -46,17 +46,19 @@
     "@babel/plugin-transform-react-constant-elements": "^7.14.5",
     "@babel/plugin-transform-react-inline-elements": "^7.14.5",
     "@babel/plugin-transform-runtime": "^7.15.0",
-    "@babel/preset-env": "^7.15.6",
-    "@babel/preset-react": "^7.14.5",
+    "@babel/preset-env": "^7.16.11",
+    "@babel/preset-react": "^7.16.7",
     "@babel/runtime": "^7.15.4",
     "babel-cli": "^6.26.0",
-    "babel-loader": "^8.1.0",
+    "babel-jest": "^26.6.3",
     "babel-plugin-transform-react-remove-prop-types": "^0.4.24",
     "file-loader": "^6.2.0",
     "firebase": "^9.1.0",
     "html-webpack-plugin": "^5.5.0",
+    "jest": "^26.6.0",
     "sass": "^1.43.4",
     "sass-loader": "^12.3.0",
+    "ts-jest": "^27.1.3",
     "url-loader": "^4.1.1",
     "web-vitals": "^2.1.0",
     "webpack": "^4.44.2",
