--- a/movie-rentals/.babelrc
+++ b/movie-rentals/.babelrc
@@ -1,11 +1,30 @@
 {
-    "presets": ["@babel/preset-react"],
-    "env": {
-        "development": {
-            "plugins": ["transform-es2015-modules-commonjs"]
-        },
-        "test": {
-            "plugins": ["transform-es2015-modules-commonjs"]
-        }
+  "presets": [
+    [
+      "@babel/preset-env",
+      {
+        "modules": false
+      },
+      "jest"
+    ],
+    ["@babel/preset-react"]
+  ],
+  "plugins": ["@babel/plugin-syntax-dynamic-import"],
+  "env": {
+    "development": {
+      "plugins": ["transform-es2015-modules-commonjs"]
+    },
+    "test": {
+      "presets": [
+        [
+          "@babel/preset-env",
+          {
+            "modules": "auto"
+          },
+          "jest"
+        ]
+      ],
+      "plugins": ["@babel/plugin-transform-runtime"]
     }
+  }
 }
