--- a/movie-rentals/package.json
+++ b/movie-rentals/package.json
@@ -8,17 +8,19 @@
     "@testing-library/user-event": "^12.8.3",
     "babel": "^6.23.0",
     "bootstrap": "^5.1.3",
+    "lodash": "^4.17.21",
     "optimize-css-assets-webpack-plugin": "^6.0.1",
     "react": "^17.0.2",
     "react-bootstrap": "^2.0.0-rc.0",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.3.0",
-    "react-scripts": "4.0.3"
+    "react-scripts": "^5.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "jest",
+    "watch": "jest --watch",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
@@ -61,7 +63,7 @@
     "ts-jest": "^27.1.3",
     "url-loader": "^4.1.1",
     "web-vitals": "^2.1.0",
-    "webpack": "^4.44.2",
+    "webpack": "^5.69.1",
     "webpack-cli": "^4.9.1"
   }
 }
