--- a/movie-rentals/package.json
+++ b/movie-rentals/package.json
@@ -14,7 +14,7 @@
     "react-bootstrap": "^2.0.0-rc.0",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.3.0",
-    "react-scripts": "^5.0.0"
+    "react-scripts": "^2.1.3"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -54,12 +54,15 @@
     "babel-cli": "^6.26.0",
     "babel-jest": "^26.6.3",
     "babel-plugin-transform-react-remove-prop-types": "^0.4.24",
+    "css-loader": "^6.6.0",
     "file-loader": "^6.2.0",
     "firebase": "^9.1.0",
+    "html-loader": "^3.1.0",
     "html-webpack-plugin": "^5.5.0",
     "jest": "^26.6.0",
     "sass": "^1.43.4",
     "sass-loader": "^12.3.0",
+    "systemjs": "^0.21.6",
     "ts-jest": "^27.1.3",
     "url-loader": "^4.1.1",
     "web-vitals": "^2.1.0",
