--- a/movie-rentals/package.json
+++ b/movie-rentals/package.json
@@ -7,7 +7,9 @@
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "babel": "^6.23.0",
+    "babel-loader": "^8.2.3",
     "bootstrap": "^5.1.3",
+    "firebase": "^9.6.8",
     "lodash": "^4.17.21",
     "optimize-css-assets-webpack-plugin": "^6.0.1",
     "react": "^17.0.2",
@@ -56,17 +58,17 @@
     "babel-plugin-transform-react-remove-prop-types": "^0.4.24",
     "css-loader": "^6.6.0",
     "file-loader": "^6.2.0",
-    "firebase": "^9.1.0",
     "html-loader": "^3.1.0",
     "html-webpack-plugin": "^5.5.0",
     "jest": "^26.6.0",
-    "sass": "^1.43.4",
-    "sass-loader": "^12.3.0",
+    "sass": "^1.49.9",
+    "sass-loader": "^12.6.0",
     "systemjs": "^0.21.6",
     "ts-jest": "^27.1.3",
     "url-loader": "^4.1.1",
     "web-vitals": "^2.1.0",
-    "webpack": "^5.69.1",
-    "webpack-cli": "^4.9.1"
+    "webpack": "^5.70.0",
+    "webpack-cli": "^4.9.1",
+    "webpack-dev-server": "^4.7.4"
   }
 }
