add plugin for css

--- a/movie-rentals/package.json
+++ b/movie-rentals/package.json
@@ -53,6 +53,7 @@
     "@babel/preset-env": "^7.16.11",
     "@babel/preset-react": "^7.16.7",
     "@babel/runtime": "^7.15.4",
+    "@types/mini-css-extract-plugin": "^2.5.1",
     "babel-cli": "^6.26.0",
     "babel-jest": "^26.6.3",
     "babel-plugin-transform-react-remove-prop-types": "^0.4.24",
@@ -61,6 +62,7 @@
     "html-loader": "^3.1.0",
     "html-webpack-plugin": "^5.5.0",
     "jest": "^26.6.0",
+    "mini-css-extract-plugin": "^2.6.0",
     "sass": "^1.49.9",
     "sass-loader": "^12.6.0",
     "systemjs": "^0.21.6",
